--- a/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
+++ b/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
@@ -223,10 +223,11 @@ The critical frequency is 10,216 $Hz$ and the coincidence frequency at 75$^\circ
 \vspace{0.25cm}
 \subsubsection*{ii - Transmission Loss at Angle of Incidence of 75$^\circ$}
 
+Figure~\ref{figure:q4transmissionLossAt75} shows the transmission loss for an angle of incidence of 75$^\circ$.
 
 \begin{figure}[htbp]
     \center
-    \includegraphics[scale=1.0]{Q4 TL for 75 AOI.pdf}
+    \includegraphics[scale=0.9]{Q4 TL for 75 AOI.pdf}
     \vspace{0.25cm}
     \caption{Flexible Panel Transmission Loss for a 75$^\circ$ Incidence Angle}
     \label{figure:q4transmissionLossAt75}
@@ -237,91 +238,45 @@ The critical frequency is 10,216 $Hz$ and the coincidence frequency at 75$^\circ
 \vspace{0.25cm}
 \subsubsection*{iii - Transmission Loss for Angles of Incidence between 0-90$^\circ$}
 
-ph
+Figure~\ref{figure:q4iiitransmissionLossAt75} shows the transmission loss angles of incidence from 0 to 90$^\circ$ in steps of 10$^\circ$.
+
+\begin{figure}[htbp]
+    \center
+    \includegraphics[scale=0.9]{Q4iii TL for 75 AOI.pdf}
+    \vspace{0.25cm}
+    \caption{Flexible Panel Transmission Loss for angles of incidence between 0 and 90$^\circ$.}
+    \label{figure:q4iiitransmissionLossAt75}
+\end{figure}
 
 
 
 \vspace{0.25cm}
 \subsubsection*{iv - Diffuse Transmission Loss}
 
-ph
+See the Matlab code in the Appendix~\ref{appendix:problem4}
 
 
 
 \newpage
 \subsection*{Problem 4c}
 
+See the Matlab code in the Appendix~\ref{appendix:problem4}
+
 
 
 \subsection*{Problem 4d}
 
-\vspace{0.25cm}
-\subsubsection*{i - Critical Frequency and Coincidence Frequency at 75$^\circ$}
+Figure~\ref{figure:q4dtransmissionLoss} shows the transmission loss angles of incidence from 0 to 90$^\circ$ in steps of 10$^\circ$.
 
-ph
+\begin{figure}[htbp]
+    \center
+    \includegraphics[scale=0.9]{Q4d TL for 75 AOI.pdf}
+    \vspace{-0.5cm}
+    \caption{Measured data and the modeled responses.}
+    \label{figure:q4dtransmissionLoss}
+\end{figure}
 
-\vspace{0.25cm}
-\subsubsection*{ii - Transmission Loss at Angle of Incidence of 75$^\circ$}
-
-ph
-
-vspace{0.25cm}
-\subsubsection*{iii - Transmission Loss for Angles of Incidence between 0-90$^\circ$}
-
-ph
-
-\vspace{0.25cm}
-\subsubsection*{iv - Diffuse Transmission Loss}
-
-
-
-
-
-%\vspace{0.25cm}
-%Figure~\ref{figure:intakeSystem} shows the transmission loss profiles.
-
-
-%\newpage
-%Table~\ref{table:helmholzResonator} lists the dimensions of the lossy Helmholtz resonator for the 129 Hz notch.
-%
-%\setlength{\abovecaptionskip}{0pt}
-%\vspace{0.1cm}
-%{\renewcommand{\arraystretch}{1.5}
-%\begin{table}[h!]
-%    \begin{center}
-%        \small
-%        \begin{tabular}{ | l | c | }
-%            \hline
-%            \textbf{Item}  &  \textbf{Measure]}  \\
-%            \hline
-%                Cavity Diameter                 &  0.254 m  \\
-%                \hline
-%                \rowcolor{Gray}
-%                Neck Diameter                   &  0.0254 m  \\
-%                \hline
-%                Neck Length                     &  0.127 m  \\
-%                \hline
-%                \rowcolor{Gray}
-%                Neck Area                       &  0.5e-3 $m^2$  \\
-%                \hline
-%                Length Correction 1, $L_{o1}$   &  0.711 m  \\
-%                \hline
-%                \rowcolor{Gray}
-%                Length Correction 2, $L_{o2}$   &  0.3 m  \\
-%                \hline
-%                Cavity Volume                   &  8.0e-5 $m^3$  \\
-%                \hline
-%                \rowcolor{Gray}
-%                Q Factor   &  10  \\
-%            \hline
-%        \end{tabular}
-%    \end{center}
-%    \caption{Dimensions of the lossy Helmholtz resonator (see slide 15 of Lecture 3 notes).}
-%    \label{table:helmholzResonator}
-%\end{table}
-
-
-
+\textbf{The finite flexible panel appears to be the most appropriate model}.  As noted in class, the measured transmission loss at 8 kHz is smaller than the loss a 4 kHz.  This indicates that the loss at 16 kHz should be less than the response of the infinite rigid panel at 16 kHz.
 
 
 
@@ -464,6 +419,54 @@ ph
 %    \caption{Calculated Mach numbers.}
 %    \label{table:machNumbers}
 %\end{table}
+
+
+
+
+
+%\vspace{0.25cm}
+%Figure~\ref{figure:intakeSystem} shows the transmission loss profiles.
+
+
+%\newpage
+%Table~\ref{table:helmholzResonator} lists the dimensions of the lossy Helmholtz resonator for the 129 Hz notch.
+%
+%\setlength{\abovecaptionskip}{0pt}
+%\vspace{0.1cm}
+%{\renewcommand{\arraystretch}{1.5}
+%\begin{table}[h!]
+%    \begin{center}
+%        \small
+%        \begin{tabular}{ | l | c | }
+%            \hline
+%            \textbf{Item}  &  \textbf{Measure]}  \\
+%            \hline
+%                Cavity Diameter                 &  0.254 m  \\
+%                \hline
+%                \rowcolor{Gray}
+%                Neck Diameter                   &  0.0254 m  \\
+%                \hline
+%                Neck Length                     &  0.127 m  \\
+%                \hline
+%                \rowcolor{Gray}
+%                Neck Area                       &  0.5e-3 $m^2$  \\
+%                \hline
+%                Length Correction 1, $L_{o1}$   &  0.711 m  \\
+%                \hline
+%                \rowcolor{Gray}
+%                Length Correction 2, $L_{o2}$   &  0.3 m  \\
+%                \hline
+%                Cavity Volume                   &  8.0e-5 $m^3$  \\
+%                \hline
+%                \rowcolor{Gray}
+%                Q Factor   &  10  \\
+%            \hline
+%        \end{tabular}
+%    \end{center}
+%    \caption{Dimensions of the lossy Helmholtz resonator (see slide 15 of Lecture 3 notes).}
+%    \label{table:helmholzResonator}
+%\end{table}
+
 
 
 
