--- a/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
+++ b/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
@@ -304,7 +304,11 @@ ph
 The Matlab code for this problem is listed in Appendix~\ref{appendix:problem5}.
 
 \vspace{0.25cm}
-ph
+% Assumption(s):
+%
+%   1.)  The enclosure is a cube.
+%   2.)  The machine sits on the ground.
+%   2.)  There is no noise transmission through the ground.
 
 
 
