--- a/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
+++ b/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
@@ -311,6 +311,48 @@ The Matlab code for this problem is listed in Appendix~\ref{appendix:problem5}.
 %   2.)  There is no noise transmission through the ground.
 
 
+\begin{figure}[htbp]
+    \center
+    \includegraphics[scale=0.5]{Q5 NW Data.png}
+    \vspace{-0.5cm}
+    \caption{Measured data and the modeled responses.}
+    \label{figure:q5nwData}
+\end{figure}
+
+
+Case 1 - QBV 2 - https://www.controlnoise.com/wp-content/uploads/2022/02/Acoustic-Enclosures-Datasheet.pdf
+
+       44.008       15.983       28.025
+       54.008       27.271       26.737
+       45.008       39.396       5.6122
+       47.008       55.395      -8.3873
+       58.008       60.395      -2.3873
+       
+with the alpha correction to 0.99
+
+
+Case 2 - QBV 3 - https://www.controlnoise.com/wp-content/uploads/2022/02/Acoustic-Enclosures-Datasheet.pdf
+
+       44.008       24.279       19.729
+       54.008       31.843       22.165
+       45.008       43.657       1.3507
+       47.008        49.21      -2.2021
+       58.008       52.314       5.6942
+       
+       
+Case 3 - In class table.
+
+
+       
+
+Case 4 - https://www.acousticsworld.com/machine-acoustic-enclosures/
+
+       44.008       33.397       10.611
+       54.008       47.395       6.6126
+       45.008       60.395      -15.387
+       47.008       65.395      -18.387
+       58.008       69.033      -11.025
+
 
 
 
