--- a/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
+++ b/40 Assignments/02 Module 2 Assignment/10 Documentation/ACS 597 - Homework 2 - Thursday, February 20, 2025.tex
@@ -289,39 +289,22 @@ Figure~\ref{figure:q4dtransmissionLoss} shows the transmission loss angles of in
 
 The Matlab code for this problem is listed in Appendix~\ref{appendix:problem5}.
 
-\vspace{0.25cm}
-ph
+My enclosure is a 2 $m$ cube that sits on the ground (5 sides of enclosure material) over the machine.  The machine is suspended above the pad (directivity factor of unity).  It is assumed that there is no noise transmission through the ground.
 
+Table~\ref{table:targetInsertionLosses} lists the target insertion losses, the calculated insertion losses for four materials, and the loss difference between the target and each type of material.  \textit{A positive value indicates that the target insertion loss for the given octave band was not met}.
 
-machine.area = 3;  % m^2
-machine.absorption = 0.07;  % m^2 or Sabin
-machine.D = 1;  % Unitless - In air.
+Figure~\ref{figure:q5ilPlot} shows calculated insertion loss differences for the data in Table~\ref{table:targetInsertionLosses}.
 
-machine.distance = 10;  % m
-
-
-\vspace{0.25cm}
-% Assumption(s):
-%
-%   1.)  The enclosure is a cube.
-%   2.)  The machine sits on the ground.
-%   2.)  There is no noise transmission through the ground.
-
-
-% What is the most restrictive case?
-
-
-Table~\ref{table:targetInsertionLosses} lists target insertion losses, the calculated insertion losses per material type, and the difference between target and calculated.  A positive value indicates that the target insertion loss for the given octave band was not meet.
-
+\vspace{-0.25cm}
 \setlength{\abovecaptionskip}{0pt}
 \vspace{0.1cm}
-{\renewcommand{\arraystretch}{1.5}
+{\renewcommand{\arraystretch}{1.25}
 \begin{table}[h!]
     \begin{center}
         \small
         \begin{tabular}{ | c | c | c | c | c | c |}
             \hline
-            \textbf{Octave Band [Hz]}  &  \textbf{Target IL [dB]}  &  \textbf{Case 1 [dB]}  &  \textbf{Case 2 [dB]}  &  \textbf{Case 3 [dB]}  &  \textbf{Case 4 [dB]}  \\
+            \textbf{Octave Band [Hz]}  &  \textbf{Target IL [dB]}  &  \textbf{QBV 2 [dB]}  &  \textbf{QBV 3 [dB]}  &  \textbf{HTL (100MM) [dB]}  &  \textbf{HTL 4 [dB]}  \\
             \hline
             250    &  44  &  28.0  &  19.7  &  10.6   &  5.6  \\
             \rowcolor{Gray}
@@ -333,47 +316,43 @@ Table~\ref{table:targetInsertionLosses} lists target insertion losses, the calcu
             \hline
         \end{tabular}
     \end{center}
-    \caption{Calculated insertion loss differences with the alpha correction to 0.99}
+    \caption{Calculated insertion losses for the 4 enclosure materials.}
     \label{table:targetInsertionLosses}
 \end{table}
 
+\vspace{-0.5cm}
+\begin{figure}[htbp]
+    \center
+    \includegraphics[scale=0.8]{Q5 IL Plot.pdf}
+    \vspace{-0.5cm}
+    \caption{Insertion loss differences.}
+    \label{figure:q5ilPlot}
+\end{figure}
 
-% Case 1 - QBV 2 - https://www.controlnoise.com/wp-content/uploads/2022/02/Acoustic-Enclosures-Datasheet.pdf
-% Case 2 - QBV 3 - https://www.controlnoise.com/wp-content/uploads/2022/02/Acoustic-Enclosures-Datasheet.pdf
-% Case 3 - https://www.acousticsworld.com/machine-acoustic-enclosures/
-% Case 4 - In class table.
+The most restrictive case given the 2 cubic-meter, 5-sided enclosure, is the HTL 4 material, Case 4, which was presented in class.  The target insertion loss was reached by all of the octave bands except the 250 Hz band.
 
+With the same enclosure dimensions and machine orientation, the HTL (100MM) material, Case 3, was found to be the second best material, not meeting the 250 Hz and 500 Hz targets. Figure~\ref{figure:q5AWcaseData} shows the transmission loss and absorption coefficient data for the material selected from \href{https://www.acousticsworld.com/machine-acoustic-enclosures/}{Acoustics World}.
 
+The QBV-2 and QBV-3 , Case 1 and Case 2, respectively, had the poorest performance.  
+Figure~\ref{figure:q5CNcaseData} shows the transmission loss and absorption coefficient data for these material from 
+\href{https://www.controlnoise.com/wp-content/uploads/2022/02/Acoustic-Enclosures-Datasheet.pdf}{Control Noise}.
 
-Figure~\ref{figure:q5CNcaseData} shows the transmission loss and absorption coefficients for the material selected from Control Noise.
+Using the HTL 4 material from class, a cube with 2 $m$ sides appeared to produce the optimal insertion loss for the 250 Hz octave band.  Making the size of the enclosure larger does not reduce this insertion loss and does not seem to be practical.  A supplementary approach for this octave band should be considered.
+
+\begin{figure}[htbp]
+    \center
+    \includegraphics[scale=0.5]{Q5 AW Data.png}
+    \caption{HTL (100MM) data from Acoustics World.}
+    \label{figure:q5AWcaseData}
+\end{figure}
 
 \begin{figure}[htbp]
     \center
     \includegraphics[scale=0.5]{Q5 NW Data.png}
-    \caption{Measured data and the modeled responses.}
+    \caption{QBV-2 and QBV-3 data from Control Noise.}
     \label{figure:q5CNcaseData}
 \end{figure}
 
-
-Figure~\ref{figure:q5AWcaseData} shows the transmission loss and absorption coefficients for the material selected from Control Noise.
-
-\begin{figure}[htbp]
-    \center
-    \includegraphics[scale=0.7]{Q5 AW Data.png}
-    \caption{Measured data and the modeled responses.}
-    \label{figure:q5AWcaseData}
-\end{figure}
-
-
-Figure~\ref{figure:q5ilPlot} shows the transmission loss angles of incidence from 0 to 90$^\circ$ in steps of 10$^\circ$.
-
-\begin{figure}[htbp]
-    \center
-    \includegraphics[scale=0.9]{Q5 IL Plot.pdf}
-    \vspace{-0.5cm}
-    \caption{Measured data and the modeled responses.}
-    \label{figure:q5ilPlot}
-\end{figure}
 
 
 
@@ -382,7 +361,7 @@ Figure~\ref{figure:q5ilPlot} shows the transmission loss angles of incidence fro
 \newpage
 \section*{Problem 6 - Close-fitting Enclosure Design}
 
-The Matlab code for this problem is listed in Appendix~\ref{appendix:problem5}.
+The Matlab code for this problem is listed in Appendix~\ref{appendix:problem6}.
 
 
 
@@ -425,7 +404,7 @@ The Matlab code for this problem is listed in Appendix~\ref{appendix:problem5}.
 
 \newpage
 \section{Appendix - Matlab Code for Problem 6}
-\label{appendix:problem5}
+\label{appendix:problem6}
 
 \lstinputlisting[style=Matlab-editor, numbers=left, mlshowsectionrules, basicstyle=\scriptsize]{../ACS_547_Module_2_Question_6_Wednesday_February_12_2025.m}
 
